--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@ font-family: 'Poppins', sans-serif;
 font-family: 'Roboto', sans-serif;
 font-family: 'Staatliches', cursive; */
 
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -22,106 +21,101 @@ font-family: 'Staatliches', cursive; */
   --teal: #75c9b7;
   --mint: #c7ddcc;
   --navy: #16123f;
-  --black: #000000
+  --black: #000000;
+  --islandSpice: #fffcec;
   --offwhite: rgba(249, 249, 249, 0.8);
 }
 
-
 body {
-    background-color: var(--lemon);
-    font-family: 'Alata', sans-serif;
-  
-    
+  background-color: var(--islandSpice);
+  font-family: 'Alata', sans-serif;
 }
 .wrapper {
-    /* max-width: 1100px; */
-
+  /* max-width: 1100px; */
 }
 
 p {
-    font-size: 14px;
-    padding: 0px 15px
-    
+  font-size: 14px;
+  padding: 0px 15px;
 }
 
 h2 {
-    margin-top: 20px;
-    margin-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
-
 .h1-color {
-    color: var(--navy);
+  color: var(--navy);
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .about {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .about-img {
-    margin-top: 25px;
-    width: 175px; 
-    border-radius: 5px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  margin-top: 25px;
+  width: 175px;
+  border-radius: 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 .about-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 20px;
-    max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 20px;
+  max-width: 500px;
 }
 
 .about-content h2 {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 .hr {
-    margin-top: 20px;
-    width: 70%;
-   border: 0.5px solid var(--navy); 
-   max-width: 1000px;
-   
+  margin-top: 20px;
+  width: 70%;
+  border: 0.5px solid var(--navy);
+  max-width: 1000px;
 }
 
 .projects {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .img-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .project-images {
-    width: 270px;
-    border-radius: 10px;
-    margin-top: 20px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  width: 270px;
+  border-radius: 10px;
+  margin-top: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 .profiles {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .icons {
-    height: 35px;
-    margin: 15px 5px;
+  height: 35px;
+  margin: 15px 5px;
 }
 
 /* a {
@@ -130,47 +124,40 @@ h2 {
 } */
 
 @media (min-width: 768px) {
-
-.about {
+  .about {
     flex-direction: row;
     justify-content: center;
     margin-top: 55px;
-}
+  }
 
-.about-img {
-    
-    width: 225px; 
+  .about-img {
+    width: 225px;
     border-radius: 5px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-}
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  }
 
-.img-container {
-
+  .img-container {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
     margin: 0px 55px;
     gap: 2rem;
+  }
 
-}
-
-.project-images {
+  .project-images {
     width: 300px;
-    
-}
+  }
 
-p {
+  p {
     font-size: 16px;
-   
-    
-}
+  }
 
-h1 {
-font-size: 36px;
-}
+  h1 {
+    font-size: 36px;
+  }
 
-h2 {
+  h2 {
     font-size: 28px;
-}
-
+  }
 }
